# sandbox

cmakePython/: CMakeLists.txt
cmakePython/cmake/modules/: pythonAux.cmake
cmakePython/src/: CMakeLists.txt
cmakePython/src/libs/jderobotcomm_py/: CMakeLists.txt
cmakePython/src/libs/jderobotcomm_py/jderobotComm/: cameraClient.py
demoCameraViewJS/: cameraserver.conf  cameraserver.daemon  cameraviewjs  cameraviewjs.conf  install.sh
demoGlacier2/browser/public/js/: main.js
demoGlacier2/demoCallback/browser/public/: index.html
demoGlacier2/demoCallback/browser/public/js/: Callback.js
demoGlacier2/demoCallback/python/: Callback.ice  Client.py  Server.py  config.server
demoGlacier2/demoCamera/basic_component_py/: basic_component.py  basic_component_py.yml  camera_ice.py  motors_ice.py
demoGlacier2/demoCamera/basic_component_py/comm/ice/: cameraIceClient.py
demoGlacier2/demoCamera/browser/: run.js
demoGlacier2/demoCamera/browser/public/: index.html
demoGlacier2/demoCamera/browser/public/js/: camera.js  main.js
demoGlacier2/demoCamera/jderobot/: __init__.py  camera.ice  motors.ice
demoGlacier2/demoMotors/: README.md
demoGlacier2/demoMotors/basic_component_py/: basic_component.py  basic_component_py.yml
demoGlacier2/demoMotors/basic_component_py/jderobot/: __init__.py
demoGlacier2/demoMotors/browser/public/: index.html
demoGlacier2/demoMotors/browser/public/js/: main.js
demoGlacier2/python/: .Callback.ice.swp  config.client
qfi_python/: README.md  prueba.py  threadGUI.py
qfi_python/qfi/: qfi_ADI.py  qfi_ALT.py  qfi_HSI.py  qfi_SI.py  qfi_TC.py  qfi_VSI.py  qfi_rc.py
